# preset-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: architecture-review.md  release-0.5.0-execution-plan.md  release-0.5.1-execution-plan.md  release-0.6.0-execution-plan.md  release-0.7.0-execution-plan.md  setup-guide.md
docs/superpowers/specs/: 2026-04-03-preset-mcp-workflow-layer-design.md
scripts/: export_golden_templates.py
src/preset_py/: __init__.py  _helpers.py  _safety.py  _viz_specs.py  client.py  server.py  snapshot.py
src/preset_py/presets/charts/: pie_default.yaml  table_default.yaml  timeseries_default.yaml
src/preset_py/presets/layouts/: flat_two_up.yaml  tabbed_two_up.yaml
src/preset_py/workflow/: __init__.py  document.py  layout_ops.py  live_adapter.py  planner.py  presets.py  types.py  yaml_adapter.py
tests/: test_client_defaults.py  test_client_helpers.py  test_client_validation.py  test_helpers.py  test_live_dashboard_smoke.py  test_new_tools.py  test_safety.py  test_server_tools.py  test_snapshot.py  test_viz_specs.py  test_workflow_live.py  test_workflow_yaml.py
tests/fixtures/workflow/: research_yield_simple.yaml  tabbed_dashboard.yaml
