[project]
name = "preset-mcp"
version = "0.1.0"
description = "MCP server for Preset (Superset) — manage dashboards, charts, and datasets from Claude Code and other LLM agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Evan Kim", email = "evankim2028@gmail.com" },
]
keywords = ["mcp", "preset", "superset", "dashboard", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "preset-cli",
    "pydantic>=2.0",
    "fastmcp>=2.0",
    "sqlglot>=26.0",
]

[project.urls]
Homepage = "https://github.com/Evan-Kim2028/preset-mcp"
Repository = "https://github.com/Evan-Kim2028/preset-mcp"
Issues = "https://github.com/Evan-Kim2028/preset-mcp/issues"

[project.scripts]
preset-mcp = "preset_py.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/preset_py"]
